--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,6 +3,8 @@ owner: ethanrusz # Your GitHub organization or username, where this repository l
 repo: status # The name of this repository
 
 sites:
+  - name: Forgejo
+    url: https://git.beans.team
   - name: Grocy
     url: https://grocy.beans.team
   - name: LanguageTool
